SERVER-7562 Query sync target with OpTime, not date